--- a/ccs/style.css
+++ b/ccs/style.css
@@ -257,3 +257,91 @@ div.listadoPizzas  div button {
     
 }
 
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 20px;
+}
+
+h1 {
+    color: #4537bd;
+    text-align: center;
+    margin-bottom: 30px;
+    
+}
+
+.service {
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.service h2 {
+    color: #007bff;
+    margin-bottom: 10px;
+}
+
+.service p {
+    color: #666;
+}
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 20px;
+}
+h1 {
+    color: #fdfdfd;
+    text-align: center;
+}
+.story {
+    max-width: 800px;
+    margin: 0 auto;
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(240, 236, 236, 0.856);
+}
+.story img {
+    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+.story p {
+    color: #666;
+}
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 20px;
+}
+h1 {
+    color: #333;
+    text-align: center;
+}
+.product {
+    max-width: 600px;
+    margin: 0 auto;
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+.product img {
+    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+.product h2 {
+    color: #007bff;
+    margin-bottom: 10px;
+}
+.product p {
+    color: #666;
+}
